Bug 1334520 - Trigger captive portal recheck recheck for NS_NETWORK_LINK_DATA_CHANGED events r=mcmanus a=jcristau MozReview-Commit-ID: L8XBLx88PbS